--- a/IdeIntegration/TechTalk.SpecFlow.IdeIntegration.csproj
+++ b/IdeIntegration/TechTalk.SpecFlow.IdeIntegration.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Generator\RemoteAppDomainTestGeneratorFactory.cs" />
     <Compile Include="Generator\RemoteGeneratorServices.cs" />
+    <Compile Include="Tracing\FileTracer.cs" />
     <Compile Include="Tracing\IIdeTracer.cs" />
     <Compile Include="Tracing\NullIdeTracer.cs" />
   </ItemGroup>
